[package]
name = "jit-calculator"
authors = ["Tim Harding"]
description = "Cranelift JIT-compiled calculator"
repository = "https://github.com/tim-harding/jit-calculator"
license-file = "LICENSE"
version = "0.1.0"
edition = "2021"

[dependencies]
cranelift = { version = "0.115.0", features = ["jit", "module", "native"] }
thiserror = "2.0.9"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benches"
harness = false
